core-api/k8s/core-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eagleworld-core-api
  labels:
    app: core-api
    domain: eagleworld.net
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-api
      domain: eagleworld.net
  template:
    metadata:
      labels:
        app: core-api
        domain: eagleworld.net
    spec:
      containers:
      - name: eagleworld-core-api
        image: eaglerock/eagleworld-core-api:stable-arm
        ports:
        - containerPort: 4000
